fixing spacing

--- a/newPage.css
+++ b/newPage.css
@@ -28,7 +28,8 @@ body{
   height:16vw;
   zoom: 1;         /* for IE */
   display*:inline; /* for IE */
-  margin-right:7%;
+  margin-right:4%;
+  margin-left:4%;
 }
 .space{
 	width:7%;
